Fix hyperlink color in dark mode

--- a/sass/custom_dark.scss
+++ b/sass/custom_dark.scss
@@ -1,9 +1,3 @@
-/* .note {
-    background-color: steelblue;
-    border-color: royalblue;
-    COMMENT ME color: black;
-} */
-
-/* .note .note_title {
-    background: royalblue;
-} */
+p:not(.quick-links):not(.contact-info) > a, li > a {
+    text-decoration-color: mediumseagreen;
+}
